[package]
name = "geekcraft"
version = "0.2.0"
edition = "2021"
authors = ["GeekCraft Team"]
description = "A programming game inspired by Screeps and Starcraft where players program bots using JavaScript"
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"  # Error handling
lazy_static = "1.4"
chrono = "0.4"

# Authentication & Database
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bcrypt = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
bson = { version = "2.9", features = ["chrono-0_4"] }

# Note: MongoDB 2.8 has a known vulnerability (CVE) related to TLS certificate validation
# when using tlsInsecure=false in connection strings. This is only a concern if using TLS.
# For production deployments, ensure proper TLS configuration or upgrade to mongodb 3.2.5+
# (requires API migration as v3 has breaking changes)

[features]
default = []

[dev-dependencies]